[gd_scene load_steps=2 format=3 uid="uid://di4bimr07vhd8"]

[ext_resource type="Script" path="res://event_box.gd" id="1_7pcir"]

[node name="BoxInfo" type="VBoxContainer"]
offset_left = 21.0
offset_right = 21.0
offset_bottom = 40.0
script = ExtResource("1_7pcir")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonDelete" type="Button" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Delete Section"
text = "x"

[node name="ButtonUp" type="Button" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Move Section Up"
text = "^"

[node name="ButtonDown" type="Button" parent="BoxContainer"]
layout_mode = 2
tooltip_text = "Move Section Down"
text = "v"

[node name="Label" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Pines should fix this text if it shows while running, go yell at him"

[connection signal="pressed" from="BoxContainer/ButtonDelete" to="." method="_on_button_delete_pressed"]
[connection signal="pressed" from="BoxContainer/ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="BoxContainer/ButtonDown" to="." method="_on_button_down_pressed"]
